@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '1.9-SNAPSHOT'
+	id 'fabric-loom' version '1.10-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -17,35 +17,44 @@ repositories {
 		name = "FzzyMaven"
 		url = "https://maven.fzzyhmstrs.me/"
 	}
-}
-
-/*List<ExternalModuleDependency> externalDeps = new ArrayList<ExternalModuleDependency>()
-
-dependencies {
-	externalDeps.add(implementation include('net.bytebuddy:byte-buddy-agent:1.14.0'))
-}*/
-
-loom {
-	accessWidenerPath = file("src/main/resources/tameable-foxes.accesswidener")
-	//splitEnvironmentSourceSets()
-
-	/*mods {
-		"tameable-foxes" {
-			sourceSet(sourceSets.main)
-			sourceSet(sourceSets.client)
-			dependency(externalDeps.toArray(new ExternalModuleDependency[]{}))
+	exclusiveContent {
+		forRepository {
+			maven {
+				name = "Modrinth"
+				url = "https://api.modrinth.com/maven"
+			}
 		}
-	}*/
+		filter {
+			includeGroup "maven.modrinth"
+		}
+	}
+}
+
+fabricApi {
+	configureDataGeneration {
+		client = true
+	}
 }
 
 dependencies {
+	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
+	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
 	modImplementation "me.fzzyhmstrs:fzzy_config:${project.fzzyConfigVersion}"
-	implementation include('net.bytebuddy:byte-buddy-agent:1.14.0')
+
+	modImplementation "maven.modrinth:companion:5.2.2+fabric"
+
+	modImplementation "maven.modrinth:not-enough-animations:1.9.3-1.20.1"
+}
+
+loom {
+	accessWidenerPath = file("src/main/resources/tameable-foxes.accesswidener")
+
 }
 
 processResources {
@@ -58,11 +67,6 @@ processResources {
 
 tasks.withType(JavaCompile).configureEach {
 	it.options.release = 17
-
-}
-
-tasks.withType(JavaExec).configureEach {
-	jvmArgs += ["--add-modules", "jdk.attach"]
 }
 
 java {
@@ -84,7 +88,8 @@ jar {
 // configure the maven publication
 publishing {
 	publications {
-		mavenJava(MavenPublication) {
+		create("mavenJava", MavenPublication) {
+			artifactId = project.archives_base_name
 			from components.java
 		}
 	}
